feat: Remove uninteresting classes. Modify CompactSourceFilesLab.java